infra/k8s/core/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: courtblink-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: courtblink-static-ip
spec:
  backend:
    serviceName: frontend-service
    servicePort: 80
  rules:
  - http:
      paths:
      - path: /api/*
        backend:
          serviceName: backend-service
          servicePort: 3000
